--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,8 @@
 databases:
   - name: postgres
     ipAllowList: []
-    databaseName: budget-app
-    user: postgres
+    databaseName: budget_app
+    user: budget_app
 
 services:
   - type: web
@@ -15,5 +15,5 @@ services:
         fromDatabase:
           name: postgres
           property: connectionString
-      - key: 06eac1c979397014d4e0cd482e61c536
+      - key: RAILS_MASTER_KEY
         sync: false
